# django-demo

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
taskmanager/accounts/: admin.py  forms.py  models.py  urls.py  views.py
taskmanager/accounts/migrations/: 0001_initial.py
taskmanager/accounts/templates/accounts/: login.html
taskmanager/apis/: serializers.py  urls.py  views.py
taskmanager/emoticons/: admin.py  models.py  urls.py  views.py
taskmanager/emoticons/fixtures/: init_data.json
taskmanager/emoticons/migrations/: 0001_initial.py  0002_ptag_alter_category_options_alter_mode_options_and_more.py  0002_tag_created_at_tag_updated_at_topic_created_at_and_more.py  0003_alter_pic_blur_hash.py  0004_alter_pic_keywords.py  0005_alter_topic_keywords.py
taskmanager/emoticons/templates/emoticons/: index.html
taskmanager/pages/: urls.py
taskmanager/taskmanager/: settings.py  urls.py
taskmanager/tasks/: admin.py  mixins.py  models.py  services.py  urls.py  views.py
taskmanager/tasks/migrations/: 0001_initial.py  0002_auto_20240320_0619.py  0003_epic_task_epic_sprint_and_more.py
taskmanager/tasks/templates/tasks/: _footer.html  base.html  help.html  task_confirm_delete.html  task_detail.html  task_form.html  task_list.html
taskmanager/templates/: _footer.html  _header.html  base.html  footer.html  header.html  home.html
taskmanager/templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
