[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["laijihua <1164258202@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
psycopg = "^3.1.18"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2024.2"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
